# raspberry-pi-lora-greenhouse-monitoring

./: .gitignore  .pre-commit-config.yaml  README-UA.md  README.md
client/: .env.example  App.tsx  app.json  package-lock.json  package.json  tailwind.config.js
client/api/: alerts.ts  client.ts  greenhouses.ts  measurements.ts
client/components/: AlertCard.tsx  Chart.tsx  GreenhouseCard.tsx  MiniChart.tsx  PeriodSelector.tsx  Screen.tsx  StatsCard.tsx  SwipeHint.tsx
client/config/: sensors.ts
client/hooks/: useAckAlerts.tsx  useAggregate.tsx  useAlerts.tsx  useGreenhouses.tsx  useMeasurements.tsx
client/navigation/: HomeStack.tsx
client/screens/: AlertsScreen.tsx  GreenhouseDetailScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
client/types/: index.ts  navigation.ts
client/utils/: dateformat.ts  stats.ts
docs/: alerts.md  architecture.md  dependencies.md  pi-cheatsheet.md  production-readiness.md  structure.md  журнал.md
scripts/: README.md  pi.env.example  pi.sh
server/: .env.example  README.md  alembic.ini  alerts.py  database.py  gateway_simulator.py  greenhouses.py  logger.py  main.py  measurements.py  messages.py  pyproject.toml  settings.py  simulate.py  thresholds.py  usb_adapter.py
server/config/: messages.yaml  nodes.yaml  thresholds.yaml
server/migrations/: env.py
server/migrations/versions/: 03acac602dee_baseline_schema.py
server/notifiers/: __init__.py  base.py  telegram.py
server/tests/: test_alerts.py
